Add DM log dashboard page

--- a/index.html
+++ b/index.html
@@ -364,6 +364,7 @@ body.avatar-overlay-open{overflow:hidden}
         <input id="q" placeholder="Search adventures"/>
       </div>
       <button id="activityToggle" class="btn small" type="button" aria-pressed="false">Hide activities</button>
+      <a class="btn small" href="dm.html">DM Log</a>
       <button id="addCard" class="icon-btn" title="Add new adventure" aria-label="Add new adventure">
         <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M12 5v14M5 12h14"/></svg>
       </button>
